--- a/RuntimeConfiguration/RuntimeConfiguration.csproj
+++ b/RuntimeConfiguration/RuntimeConfiguration.csproj
@@ -7,4 +7,16 @@
     <RootNamespace>ToolBox.RuntimeConfiguration</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.12.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="ToolBox.RuntimeConfiguration.targets" />
+  </ItemGroup>
+  <ItemGroup>
+    <Build Include="ToolBox.RuntimeConfiguration.targets" />
+  </ItemGroup>
+
+
 </Project>
