--- a/ConfigGeneration.Tool/ConfigGeneration.Tool.csproj
+++ b/ConfigGeneration.Tool/ConfigGeneration.Tool.csproj
@@ -14,11 +14,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RuntimeConfiguration\ConfigGeneration.csproj" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    <ProjectReference Include="..\ConfigGeneration\ConfigGeneration.csproj" />
   </ItemGroup>
+
+    <ItemGroup>
+        <None Include="src/configuration/**/*.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
 
 </Project>
