--- a/Safety/Safety.csproj
+++ b/Safety/Safety.csproj
@@ -1,9 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <PackageId>ToolBox.Safety</PackageId>
+        <TargetFramework>net8.0</TargetFramework>
+        <IsPackable>true</IsPackable>
+        <Version>1.0.0</Version>
+        <Authors>Ron Gissin</Authors>
+        <Description>A library for easy argument validation.</Description>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <RootNamespace>ToolBox.Safety</RootNamespace>
+    </PropertyGroup>
 
 </Project>
