--- a/.github/workflows/publish-nugets.yml
+++ b/.github/workflows/publish-nugets.yml
@@ -51,6 +51,6 @@ jobs:
 
             for nupkg in ./nupkgs/*.nupkg; do
               echo "Publishing $nupkg"
-              dotnet nuget push "$nupkg" --api-key $NUGET_API_KEY --source https://api.nuget.org/v3/index.json
+              dotnet nuget push "$nupkg" --api-key $NUGET_API_KEY --source https://api.nuget.org/v3/index.json --skip-duplicate
             done
           done
