--- a/ConfigGeneration/ConfigGeneration.csproj
+++ b/ConfigGeneration/ConfigGeneration.csproj
@@ -6,8 +6,14 @@
     <IsPackable>true</IsPackable>
     <Description>Generates multiple appsettings files accorindg to a user defined hierarchy.</Description>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <RootNamespace>ToolBox.ConfigGeneration</RootNamespace>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+  </ItemGroup>
   
 </Project>
