--- a/ConfigGenerationSample/ConfigGenerationSample.csproj
+++ b/ConfigGenerationSample/ConfigGenerationSample.csproj
@@ -8,12 +8,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-    <!-- Uncomment for testing the tool on the sample project -->
-    <!--<Target Name="RunConfigTool" BeforeTargets="BeforeBuild">
-        <Exec Command="dotnet tool run toolbox-config-gen -inputDirectoryPath $(ProjectDir)src/configuration -outputDirectoryPath $(ProjectDir)src/configuration/generated -hierarchyFilePath $(ProjectDir)src/configuration/hierarchy.json" />
-    </Target>-->
+  <ItemGroup>
+    <None Update="src/configuration/generated/**/*.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\ConfigGeneration\ConfigGeneration.csproj" />
+  </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\ConfigGeneration\ConfigGeneration.csproj" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
 </Project>
