--- a/Safety/Safety.csproj
+++ b/Safety/Safety.csproj
@@ -6,7 +6,7 @@
         <IsPackable>true</IsPackable>
         <Description>A library for easy argument validation.</Description>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
         <RootNamespace>ToolBox.Safety</RootNamespace>
     </PropertyGroup>
 
