--- a/ConfigGeneration/ConfigGeneration.csproj
+++ b/ConfigGeneration/ConfigGeneration.csproj
@@ -15,5 +15,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
   
 </Project>
