package readme file

--- a/ConfigGeneration/ConfigGeneration.csproj
+++ b/ConfigGeneration/ConfigGeneration.csproj
@@ -8,6 +8,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <RootNamespace>ToolBox.ConfigGeneration</RootNamespace>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
   
   <ItemGroup>
