--- a/ConfigGeneration/ConfigGeneration.csproj
+++ b/ConfigGeneration/ConfigGeneration.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>ToolBox.ConfigGeneration</RootNamespace>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageReleaseNotes>
+        v.1.1.1: Updated README.
         v.1.1.0: Added `AutoRegisterConfigurations` to enable automatic binding of configurations.
         v.1.0.0: Initial release.
     </PackageReleaseNotes>
