--- a/Safety/Safety.csproj
+++ b/Safety/Safety.csproj
@@ -8,6 +8,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
         <RootNamespace>ToolBox.Safety</RootNamespace>
+        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
         <PackageReleaseNotes>
             v.1.1.0: Added new validation methods - `ThrowIfNotBetween`, `ThrowIfBelowLowerBound`, `ThrowIfAboveUpperBound`, `ThrowIfEmptyGuid`, `ThrowIfNullOrEmptyEnumerable`.
             v.1.0.0: Initial release.
