--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,5 +3,6 @@
     <!-- Centralized version for all projects -->
     <Version>1.3.0</Version>
     <Authors>Ron Gissin</Authors>
+    <PackageProjectUrl>https://github.com/RonGissin/toolbox</PackageProjectUrl>
   </PropertyGroup>
 </Project>
