--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,5 +4,6 @@
     <Version>1.3.0</Version>
     <Authors>Ron Gissin</Authors>
     <PackageProjectUrl>https://github.com/RonGissin/toolbox</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/RonGissin/toolbox</RepositoryUrl>
   </PropertyGroup>
 </Project>
