--- a/DependencyInjection/DependencyInjection.csproj
+++ b/DependencyInjection/DependencyInjection.csproj
@@ -10,9 +10,11 @@
       <RootNamespace>ToolBox.DependencyInjection</RootNamespace>
       <PackageReadmeFile>README.md</PackageReadmeFile>
       <PackageReleaseNotes>
-          v.1.3.0: Added `IServiceProvider.Verify` method to verify all services are registered correctly.
-          v.1.2.0: Initial version - added `AddDecorator{TService, TDecorator}` extension.
+          `v.1.4.0`: Improved nuget package metadata.
+          `v.1.3.0`: Added `IServiceProvider.Verify` method to verify all services are registered correctly.
+          `v.1.2.0`: Initial version - added `AddDecorator{TService, TDecorator}` extension.
       </PackageReleaseNotes>
+      <PackageTags>toolbox;tools;extensions;dependency-injection;service-collection</PackageTags>
   </PropertyGroup>
 
     <ItemGroup>
